coit-simple-microservice/resource-manifests/pod-coit-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: coit-frontend
spec:
  containers:
  - name: coit-frontend
    image: coitlearning/coit-frontend:v11
    ports:
    - containerPort: 80
