coit-simple-microservice/resource-manifests/ingress-coit-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
